# dev

./: .gitignore  .gitmodules
C/: buconero  buconero.c  build.sh
C++/circuit_generator/: ac_generator_tmp.txt  circuit_generator  circuit_generator.cpp  circuit_generator_ac_methods.txt  circuit_gui.py  web_app.py
CProjects/: Makefile  cript.c  tetris.c
IdeaProjects/LezioniJava/: data2.csv
JavaProjects/Grafica-2D/: .gitignore  .project  README.md  pom.xml
JavaProjects/LezioneGrafica2D/: .project  README.md  pom.xml
JavaProjects/diocane/: Cargo.toml
LaTeX/java_project/: LaTeX-template-PIGDM.aux  LaTeX-template-PIGDM.bbl  LaTeX-template-PIGDM.blg  LaTeX-template-PIGDM.fdb_latexmk  LaTeX-template-PIGDM.fls  LaTeX-template-PIGDM.out  LaTeX-template-PIGDM.tex  LaTeX-template-PIGDM.toc  bibliografia.bib
LaTeX/prova/: main.fdb_latexmk  main.fls  main.tex
MATLAB/: boh.m
MATLAB/Modem/: main.asv  main.m
MATLAB/New Folder/: class1.m  gioco_della_vita.asv  gioco_della_vita.m
Python/compression_DCT/: agents.md  bek_format_pb2.py  dct_compress.py  decode_bek.py  encode_bek.py  live_stats.json  my_live_stats.json  test_dct.py  test_resample.py
Python/compression_DCT2/: Cargo.toml  build.rs
Python/compression_DCT2/proto/: bek_format.proto
Python/compression_DCT2/src/: dct_compress.rs  dct_utils.rs  decode_bek.rs  encode_bek.rs  lib.rs  morton.rs  ply_io.rs  quantize.rs  rle.rs
Python/prove_esame/: pyproject.toml
Python/triplane/: visualize_triplanes.py
PythonProjects/Uni/: eda.py  esercitazione_1.py  iris.data  lezione_pandas.py  (+3 more)
matlab/: PID.asv  PID.m
(+54 files in other folders)
