[package]
name = "compression_dct2"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
rustdct = "0.7"
rustfft = "6.2"
prost = "0.13"
zstd = "0.13"
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
byteorder = "1.5"
half = "2.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "encode_bek"
path = "src/encode_bek.rs"

[[bin]]
name = "decode_bek"
path = "src/decode_bek.rs"

[[bin]]
name = "dct_compress"
path = "src/dct_compress.rs"

[profile.release]
lto = "thin"
codegen-units = 1
